Wrapped everything in a box with the correct padding around it and changed the table width calculations to match.

--- a/resources/styles/components/scores/index.less
+++ b/resources/styles/components/scores/index.less
@@ -11,10 +11,16 @@
 
   .nav-tabs {
     .tutor-nav-tabs();
+    border-bottom: none;
 
-    li.active {
-      border: 1px solid @nav-tabs-border-color;
-      border-bottom: none;
+    li {
+      border-bottom: 1px solid @nav-tabs-border-color;
+
+      &.active {
+        position: relative;
+        border: 1px solid @nav-tabs-border-color;
+        border-bottom: none;
+      }
     }
   }
   &.panel {
@@ -22,6 +28,10 @@
   }
   .course-scores-wrap {
     position: relative;
+  }
+  .course-scores-container {
+    padding: 15px;
+    border: 1px solid @nav-tabs-border-color;
   }
   .course-scores-title {
     font-size: 3rem;
@@ -38,7 +48,7 @@
     font-size: 1.2rem;
     color: @tutor-neutral;
     &.tab {
-      margin-left: 10px;
+      margin-left: 25px;
       line-height: 40px;
     }
   }
